# dashboard

./: pyproject.toml  scss
client/: client.py
src/api/: env.py  main.py  models.py
src/api/data/: init.sql
src/api/objects/: guild.py
src/api/routers/: __init__.py  api.py  frontend.py
src/api/utils/: auth.py  database.py  redis.py
src/web/res/: style.scss
src/web/static/css/: style.css  style.css.map
src/web/static/js/: base.js
src/web/templates/: _base.html  config.html  guilds.html  index.html
